@@ -9,6 +9,8 @@ static const char	RCSid[] = "$Id$";
 
 #include "copyright.h"
 
+#include  "platform.h"
+
 #include "standard.h"
 
 #include "color.h"
